@@ -23,6 +23,7 @@ from bzrlib import (
     bzrdir,
     conflicts,
     errors,
+    mutabletree,
     osutils,
     revision as _mod_revision,
     ui,
@@ -536,3 +537,19 @@ class TestCommitProgress(TestCaseWithWorkingTree):
              ],
             factory._calls
            )
+
+    def test_start_commit_hook(self):
+        """Make sure a start commit hook can modify the tree that is 
+        committed."""
+        def start_commit_hook_adds_file(tree):
+            open(tree.abspath("newfile"), 'w').write("data")
+            tree.add(["newfile"])
+        def restoreDefaults():
+            mutabletree.MutableTree.hooks['start_commit'] = []
+        self.addCleanup(restoreDefaults)
+        tree = self.make_branch_and_tree('.')
+        mutabletree.MutableTree.hooks.install_hook('start_commit', 
+            start_commit_hook_adds_file)
+        revid = tree.commit('first post')
+        committed_tree = tree.basis_tree()
+        self.assertTrue(committed_tree.has_filename("newfile"))
